Refactor font-face declarations and add new font family
- Refactored the font-face declarations in app.css to include a new font family called 'Content'.
- Added a new font-face declaration for the 'Content' font in app.css.

Fix gradient styling in land/+page.svelte

- Removed the commented-out linearGradient element in land/+page.svelte.
- Updated the background gradient styling in the radialGradient element in land/+page.svelte.

Update transition timing in +page.svelte

- Updated the transition timing for various properties in the CSS of +page.svelte to 1.5s ease-in-out.

Add profile partition to land page

- Added a new profile partition to the land page.
- Included a profile picture and name in the profile partition.

Add about Me partition to land page

- Added a new about Me partition to the land page.
- Included a heading and content text in the about Me partition.

--- a/src/app.css
+++ b/src/app.css
@@ -47,6 +47,11 @@ body {
 	src: url("../src/lib/fonts/Slim.ttf");
 }
 
+@font-face {
+	font-family: 'Content';
+	src: url("../src/lib/fonts/Content.ttf");
+}
+
 .boldText {
 	font-family: 'Bold';
 }
@@ -57,6 +62,10 @@ body {
 
 .slimText {
 	font-family: 'Slim';
+}
+
+.contentText {
+	font-family: 'Content';
 }
 
 h1,
